--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="stylesheets/main.css" rel="stylesheet">
+ 
   </head>
 
   <body>
@@ -47,10 +48,11 @@
       </div>
 
 
-      <div class="jumbotron">
-        <h1> Dendogram of issues by severity</h1>
-        <svg width="960" height="600"></svg>
-      </div>
+
+        <h1> Bubble chart by severity</h1>
+        <div id="mainBubble">
+       </div>
+
 
     </div><!-- /.container -->
 
@@ -61,72 +63,256 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-    <script src="http://d3js.org/d3.v4.0.0-alpha.4.min.js"> </script>
-    <script src="http://d3js.org/d3.v4.min.js"></script>
 
-    <script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="http://sunsp.net/script/ga_sunsp.js"></script>
 
 
-    var jsondata = $.getJSON( "testhtml5.json", function(data) {
-        console.log( "success" + data.issues[0].name);
-  var issues = [];
-        for(i=0; i<data.issues.length; i++){
-          //console.log(data.issues[i].name);
-          issues[i] = data.issues[i].name;
+  <script>
+   var w = window.innerWidth*0.68*0.95;
+   var h = Math.ceil(w*0.5);
+   var oR = 0;
+   var nTop = 0;
+
+   var svgContainer = d3.select("#mainBubble")
+      .style("height", h+"px");
+
+   var svg = d3.select("#mainBubble").append("svg")
+    .attr("class", "mainBubbleSVG")
+      .attr("width", w)
+      .attr("height",h)
+    .on("mouseleave", function() {return resetBubbles();});
+
+  var mainNote = svg.append("text")
+  .attr("id", "bubbleItemNote")
+  .attr("x", 10)
+  .attr("y", w/2-15)
+  .attr("font-size", 15)
+  .attr("dominant-baseline", "middle")
+  .attr("alignment-baseline", "middle")
+  .style("fill", "#000088")
+  .text(function(d) {return "testhtml5.vulnweb.com Archani scan results";});
+
+
+    d3.json("./main_bubble.json", function(error, root) {
+      console.log(error);
+
+      var bubbleObj = svg.selectAll(".topBubble")
+            .data(root.children)
+          .enter().append("g")
+            .attr("id", function(d,i) {return "topBubbleAndText_" + i});
+
+        console.log(root);
+        nTop = root.children.length;
+        oR = w/(1+3*nTop);
+
+    h = Math.ceil(w/nTop*2);
+    svgContainer.style("height",h+"px");
+
+        var colVals = d3.scale.category10();
+
+      bubbleObj.append("circle")
+          .attr("class", "topBubble")
+          .attr("id", function(d,i) {return "topBubble" + i;})
+          .attr("r", function(d) { return oR; })
+          .attr("cx", function(d, i) {return oR*(3*(1+i)-1);})
+          .attr("cy", (h+oR)/3)
+          .style("fill", function(d,i) { return colVals(i); }) // #1f77b4
+      .style("opacity",0.3)
+          .on("mouseover", function(d,i) {return activateBubble(d,i);});
+
+
+      bubbleObj.append("text")
+          .attr("class", "topBubbleText")
+          .attr("x", function(d, i) {return oR*(3*(1+i)-1);})
+          .attr("y", (h+oR)/3)
+      .style("fill", function(d,i) { return colVals(i); }) // #1f77b4
+          .attr("font-size", 30)
+          .attr("text-anchor", "middle")
+      .attr("dominant-baseline", "middle")
+      .attr("alignment-baseline", "middle")
+          .text(function(d) {return d.name})
+          .on("mouseover", function(d,i) {return activateBubble(d,i);});
+
+
+        for(var iB = 0; iB < nTop; iB++)
+        {
+          var childBubbles = svg.selectAll(".childBubble" + iB)
+            .data(root.children[iB].children)
+            .enter().append("g");
+
+    //var nSubBubble = Math.floor(root.children[iB].children.length/2.0);
+
+          childBubbles.append("circle")
+            .attr("class", "childBubble" + iB)
+            .attr("id", function(d,i) {return "childBubble_" + iB + "sub_" + i;})
+            .attr("r",  function(d) {return oR/3.0;})
+            .attr("cx", function(d,i) {return (oR*(3*(iB+1)-1) + oR*1.5*Math.cos((i-1)*45/180*Math.PI));})
+            .attr("cy", function(d,i) {return ((h+oR)/3 +        oR*1.5*Math.sin((i-1)*45/180*Math.PI));})
+            .attr("cursor","pointer")
+            .style("opacity",0.5)
+            .style("fill", "#eee")
+            .on("click", function(d,i) {
+          window.open(d.address);
+        })
+      .on("mouseover", function(d,i) {
+        //window.alert("say something");
+        var noteText = "";
+        if (d.note == null || d.note == "") {
+          noteText = d.address;
+        } else {
+          noteText = d.note;
         }
-        console.log("ISSUES:"+issues);
+        d3.select("#bubbleItemNote").text(noteText);
+        })
+      .append("svg:title")
+      .text(function(d) { return d.address; });
 
-    });
+          childBubbles.append("text")
+            .attr("class", "childBubbleText" + iB)
+            .attr("x", function(d,i) {return (oR*(3*(iB+1)-1) + oR*1.5*Math.cos((i-1)*45/180*Math.PI));})
+            .attr("y", function(d,i) {return ((h+oR)/3 +        oR*1.5*Math.sin((i-1)*45/180*Math.PI));})
+            .style("opacity",0.5)
+            .attr("text-anchor", "middle")
+          .style("fill", function(d,i) { return colVals(iB); }) // #1f77b4
+            .attr("font-size", 6)
+            .attr("cursor","pointer")
+            .attr("dominant-baseline", "middle")
+      .attr("alignment-baseline", "middle")
+            .text(function(d) {return d.name})
+            .on("click", function(d,i) {
+          window.open(d.address);
+            });
 
-    /*DENDOGRAM*/
-
-    var svg = d3.select("svg"),
-    width = +svg.attr("width"),
-    height = +svg.attr("height"),
-    g = svg.append("g").attr("transform", "translate(40,0)");
-
-    var cluster = d3.cluster()
-        .size([height, width - 160]);
-
-    var stratify = d3.stratify()
-        .parentId(function(d) { return d.id.substring(0, d.id.lastIndexOf(".")); });
-
-    d3.csv("dendo.csv", function(error, data) {
-      if (error) throw error;
-
-      var root = stratify(data)
-          .sort(function(a, b) { return (a.height - b.height) || a.id.localeCompare(b.id); });
-
-      cluster(root);
-
-      var link = g.selectAll(".link")
-          .data(root.descendants().slice(1))
-        .enter().append("path")
-          .attr("class", "link")
-          .attr("d", function(d) {
-            return "M" + d.y + "," + d.x
-                + "C" + (d.parent.y + 100) + "," + d.x
-                + " " + (d.parent.y + 100) + "," + d.parent.x
-                + " " + d.parent.y + "," + d.parent.x;
-          });
-
-      var node = g.selectAll(".node")
-          .data(root.descendants())
-        .enter().append("g")
-          .attr("class", function(d) { return "node" + (d.children ? " node--internal" : " node--leaf"); })
-          .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
-
-      node.append("circle")
-          .attr("r", 2.5);
-
-      node.append("text")
-          .attr("dy", 3)
-          .attr("x", function(d) { return d.children ? -8 : 8; })
-          .style("text-anchor", function(d) { return d.children ? "end" : "start"; })
-          .text(function(d) { return d.id.substring(d.id.lastIndexOf(".") + 1); });
-    });
+      }
 
 
-    </script>
+        });
+
+    resetBubbles = function () {
+    w = window.innerWidth*0.68*0.95;
+    oR = w/(1+3*nTop);
+
+    h = Math.ceil(w/nTop*2);
+    svgContainer.style("height",h+"px");
+
+    mainNote.attr("y",h-15);
+
+    svg.attr("width", w);
+    svg.attr("height",h);
+
+    d3.select("#bubbleItemNote").text("testhtml5.vulnweb.com Archani scan results");
+
+    var t = svg.transition()
+      .duration(650);
+
+      t.selectAll(".topBubble")
+        .attr("r", function(d) { return oR; })
+          .attr("cx", function(d, i) {return oR*(3*(1+i)-1);})
+          .attr("cy", (h+oR)/3);
+
+      t.selectAll(".topBubbleText")
+    .attr("font-size", 30)
+          .attr("x", function(d, i) {return oR*(3*(1+i)-1);})
+          .attr("y", (h+oR)/3);
+
+    for(var k = 0; k < nTop; k++)
+    {
+      t.selectAll(".childBubbleText" + k)
+            .attr("x", function(d,i) {return (oR*(3*(k+1)-1) + oR*1.5*Math.cos((i-1)*45/180*Math.PI));})
+            .attr("y", function(d,i) {return ((h+oR)/3 +        oR*1.5*Math.sin((i-1)*45/180*Math.PI));})
+      .attr("font-size", 6)
+            .style("opacity",0.5);
+
+      t.selectAll(".childBubble" + k)
+            .attr("r",  function(d) {return oR/3.0;})
+      .style("opacity",0.5)
+            .attr("cx", function(d,i) {return (oR*(3*(k+1)-1) + oR*1.5*Math.cos((i-1)*45/180*Math.PI));})
+            .attr("cy", function(d,i) {return ((h+oR)/3 +        oR*1.5*Math.sin((i-1)*45/180*Math.PI));});
+
+    }
+  }
+
+
+        function activateBubble(d,i) {
+          // increase this bubble and decrease others
+      var t = svg.transition()
+          .duration(d3.event.altKey ? 7500 : 350);
+
+        t.selectAll(".topBubble")
+          .attr("cx", function(d,ii){
+          if(i == ii) {
+            // Nothing to change
+            return oR*(3*(1+ii)-1) - 0.6*oR*(ii-1);
+          } else {
+            // Push away a little bit
+            if(ii < i){
+              // left side
+              return oR*0.6*(3*(1+ii)-1);
+            } else {
+              // right side
+              return oR*(nTop*3+1) - oR*0.6*(3*(nTop-ii)-1);
+            }
+          }
+          })
+            .attr("r", function(d, ii) {
+              if(i == ii)
+                return oR*1.8;
+              else
+                return oR*0.8;
+              });
+
+          t.selectAll(".topBubbleText")
+          .attr("x", function(d,ii){
+          if(i == ii) {
+            // Nothing to change
+            return oR*(3*(1+ii)-1) - 0.6*oR*(ii-1);
+          } else {
+            // Push away a little bit
+            if(ii < i){
+              // left side
+              return oR*0.6*(3*(1+ii)-1);
+            } else {
+              // right side
+              return oR*(nTop*3+1) - oR*0.6*(3*(nTop-ii)-1);
+            }
+          }
+          })
+            .attr("font-size", function(d,ii){
+          if(i == ii)
+            return 30*1.5;
+          else
+            return 30*0.6;
+            });
+
+      var signSide = -1;
+      for(var k = 0; k < nTop; k++)
+      {
+        signSide = 1;
+        if(k < nTop/2) signSide = 1;
+        t.selectAll(".childBubbleText" + k)
+              .attr("x", function(d,i) {return (oR*(3*(k+1)-1) - 0.6*oR*(k-1) + signSide*oR*2.5*Math.cos((i-1)*45/180*Math.PI));})
+              .attr("y", function(d,i) {return ((h+oR)/3 + signSide*oR*2.5*Math.sin((i-1)*45/180*Math.PI));})
+              .attr("font-size", function(){
+                  return (k==i)?15:6;
+                })
+          .style("opacity",function(){
+              return (k==i)?1:0;
+            });
+
+        t.selectAll(".childBubble" + k)
+              .attr("cx", function(d,i) {return (oR*(3*(k+1)-1) - 0.6*oR*(k-1) + signSide*oR*2.5*Math.cos((i-1)*45/180*Math.PI));})
+              .attr("cy", function(d,i) {return ((h+oR)/3 + signSide*oR*2.5*Math.sin((i-1)*45/180*Math.PI));})
+          .attr("r", function(){
+              return (k==i)?(oR*0.55):(oR/3.0);
+          })
+          .style("opacity", function(){
+              return (k==i)?1:0;
+            });
+      }
+        }
+  window.onresize = resetBubbles;
+</script>
+
   </body>
 </html>
